# pixy

./: .gitignore  CMakeLists.txt  README.md  pixy.cpp  pixy.h  pypixy.pyx  setup.py  test.cpp  test.py
src/host/libpixyusb2/src/: Makefile
